--- a/docroot/themes/iucn_who/less/homepage.less
+++ b/docroot/themes/iucn_who/less/homepage.less
@@ -9,7 +9,7 @@
 //     }
 //   }
 // }
-@map-sidebar-height: (@navbar-height + @map-footer-height - (@map-scrolldown-height * 5 / 4));
+@map-sidebar-height-offset: (@navbar-height + (@map-scrolldown-height * 3 / 4));
 .path-frontpage {
   @media @grid-mobile {
     .region-content {
@@ -29,8 +29,8 @@
       .row.map-block-main {
         display: flex;
         height: 100vh;
-        margin-bottom: -@map-sidebar-height;
-        padding-bottom: @map-sidebar-height;
+        margin-bottom: -@map-sidebar-height-offset;
+        padding-bottom: @map-sidebar-height-offset;
       }
       .col-left {
         box-shadow: 8px 0 10px -9px fade(#000, 30%);
@@ -49,15 +49,18 @@
       .map-block-footer {
         .background-variant(@iucn-blue-dark, #fff);
         align-items: center;
-        display: flex;
-        flex-direction: column;
+        // display: flex;
+        // flex-direction: column;
         font-size: 37 * @rem-multiplier--desktop;
-        justify-content: center;
+        // justify-content: center;
         min-height: @map-footer-height;
         position: relative;
         text-align: center;
         z-index: 1;
         box-shadow: 0 -1px 8px -2px fade(#000, 30%);
+        .block-footer-text {
+          margin-top: .2em;
+        }
         .scroll-down {
           background-color: #fff;
           background-image: url(~'@{images-path}scroll-down-caret.svg');
@@ -66,13 +69,16 @@
           background-size: 66%;
           border-radius: 50%;
           display: block;
-          height: 60 * @rem-multiplier--desktop;
+          height: @map-scrolldown-height;
           position: absolute;
           top: 0;
           left: 50%;
           transform: translate(-50%, -50%);
-          width: 60 * @rem-multiplier--desktop;
+          width: @map-scrolldown-height;
           box-shadow: 0 -1px 8px -2px fade(#000, 30%);
+        }
+        #scroll-down-target {
+          height: (@map-scrolldown-height * 3 / 4);
         }
       }
     }
@@ -632,8 +638,4 @@
       order: -1;
     }
   }
-}
-
-#scroll-down-target {
-  height: @map-scrolldown-height / 2;
 }
